Add table and id for when the XMLHttp can input API data as well as created the XMLHttp request with data displaying temporarily in the demo position

--- a/index.html
+++ b/index.html
@@ -10,5 +10,21 @@
 
   <body>
     <h1>Free Code Camp Leaderboard</h1>
+    <table>
+      <tr>
+        <th>Place</th>
+        <th>Name</th>
+        <th>Points in the Last 30 Days</th>
+        <th>Points of All Time</th>
+      </tr>
+      <tr class="camperList">
+        <td>Rank # Here</td>
+        <td>CamperName Here</td>
+        <td>Points of 30 Days Here</td>
+        <td>Points of All Time Here</td>
+      </tr>
+    </table>
+    <h2>Demo Info for XMLHttpRequest Testing</h2>
+    <p id="demo">XMLHttpRequest not Functioning</p>
   </body>
 </html>
